# PyOptBook

./: pyproject.toml
src/ch2/: main.py
