[tool.poetry]
name = "pyoptbook"
version = "0.1.0"
description = ""
authors = ["spring1018 <spring1018nbrandall@gmail.com>"]
readme = "README.md"
packages = [{include = "pyoptbook", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
